--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,4 +4,7 @@ title: Closure.jp
 
 <div class="welcome">
   <h1>Closure.jp</h1>
+  <p class~"lead">
+    welcome to closure.jp
+  </p>
 </div><!-- .welcome -->
